src/objects/ACCL__Contract_Template__c.object
<CustomObject>
    <description>Contract and Tactic Templates object</description>
    <fields>
        <fullName>ACCL__Account_Contract_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the contract template with which the tactic template record is related. Mandatory for the tactic template record type.</description>
        <label>Customer Contract Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>The Customer Contract Template and the Contract Template must have the same Sales Org.</errorMessage>
            <filterItems>
                <field>ACCL__Contract_Template__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Contract Template</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Contract_Template__c.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>$Source.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Contract_Template__c</referenceTo>
        <relationshipLabel>Contract Tactic Templates</relationshipLabel>
        <relationshipName>Contract_Templates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Active_Policy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies if a contract tactic of this type is initially preset as included in the contract (not considered if the contract tactic is manually added to the promotion).</description>
        <label>Active Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active flag.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Automatic_Creation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Describes whether the customer contract created approved with this template will leverage the creation of a contract payment.</description>
        <label>Automated Payment Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Copy_Tactics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes whether the tactics created after this tactic template will be included in the copy of the contract.</description>
        <label>Copy Tactics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Description Language 3</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Reference to the description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the job definition list.</description>
        <label>Activity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contract Template and the Activity must have the same Sales Org.</errorMessage>
            <filterItems>
                <field>ACCL__Job_Definition_List__c.ACCL__Job_Definition_List_Template__r.ACCL__Consider_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Job_Definition_List__c.ACCL__Job_Definition_List_Template__r.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Job_Definition_List__c</referenceTo>
        <relationshipLabel>Contract Templates</relationshipLabel>
        <relationshipName>Contract_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Days__c</fullName>
        <defaultValue>9999</defaultValue>
        <description>Maximum duration of the contract in days</description>
        <label>Max Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Meta_Type__c</fullName>
        <description>Metatype for the integration with mobile device</description>
        <label>Meta Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomerContract</fullName>
                </value>
                <value>
                    <fullName>Tactic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Min_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Minimum duration of the contract in days</description>
        <label>Min Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Preset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes whether the Tactic Template will be preset when creating the contract. If not checked, Tactics will be available for adding manually after creation.</description>
        <label>Preset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Policy__c</fullName>
        <description>Describes the cardinality of the products related to the contracts based on this template.</description>
        <label>Product Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>ZeroOrMore</fullName>
                    <default>true</default>
                    <label>ZeroOrMore</label>
                </value>
                <value>
                    <fullName>OneOrMore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the contract template belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sort_Count__c</fullName>
        <description>Holds the sort value</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Workflow. Mandatory for the contract template record type.</description>
        <label>Workflow</label>
        <referenceTo>ACCL__Workflow__c</referenceTo>
        <relationshipLabel>Contract Templates</relationshipLabel>
        <relationshipName>Contract_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Template</label>
    <listViews>
        <fullName>ACCL__Tactic_Templates</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Account_Contract_Template__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Contract_Template__c.ACCL__Contract_Tactic_Template</value>
        </filters>
        <label>Contract Tactic Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contract_Templates</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Contract_Template__c.ACCL__Customer_Contract_Template</value>
        </filters>
        <label>Customer Contract Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tactic_Templates</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Account_Contract_Template__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Contract_Template__c.ACCL__Contract_Tactic_Template</value>
        </filters>
        <label>Contract Tactic Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Templates</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Contract_Tactic_Template</fullName>
        <active>true</active>
        <description>Selection of the record type of the new tactic template</description>
        <label>Contract Tactic Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Customer_Contract_Template</fullName>
        <active>true</active>
        <description>Selection of the record type of the new customer contract template</description>
        <label>Customer Contract Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Avoid_Sales_Org_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after ContractTemplate creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Contract_Template_Rule</fullName>
        <active>true</active>
        <description>The Customer Contract Template can&apos;t be empty.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Contract_Tactic_Template&apos;,  ISBLANK(ACCL__Account_Contract_Template__r.Id ))</errorConditionFormula>
        <errorDisplayField>ACCL__Account_Contract_Template__c</errorDisplayField>
        <errorMessage>The Customer Contract Template can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Job_Definition_List_can_not_be_change</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( ACCL__Job_Definition_List__c )</errorConditionFormula>
        <errorMessage>The Activity can&apos;t be edited after Contract Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Maximum_Days</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Customer_Contract_Template&apos;,   OR( ISBLANK( ACCL__Max_Days__c  ) ,ACCL__Max_Days__c  &lt; 1, ACCL__Max_Days__c &lt;  ACCL__Min_Days__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Max_Days__c</errorDisplayField>
        <errorMessage>The Max Days must be a number equal or greater than 1 and equal or greater than the Min Days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Minimum_Days</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Customer_Contract_Template&apos;,           OR( ISBLANK(ACCL__Min_Days__c ) ,ACCL__Min_Days__c &lt; 1))</errorConditionFormula>
        <errorDisplayField>ACCL__Min_Days__c</errorDisplayField>
        <errorMessage>The Min Days must be a number equal or greater than 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_Workflow</fullName>
        <active>true</active>
        <description>The Contract Template and Workflow must have the same Sales Org.</description>
        <errorConditionFormula>NOT(ISBLANK( ACCL__Workflow__c )) &amp;&amp; TEXT(ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Workflow__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Contract Template and Workflow must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_org</fullName>
        <active>true</active>
        <description>The Customer Contract Template and the Contract Template must have the same Sales Org.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Contract_Tactic_Template&apos;,TEXT(ACCL__Account_Contract_Template__r.ACCL__Sales_Org__c) !=  TEXT(ACCL__Sales_Org__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Sales_Org__c</errorDisplayField>
        <errorMessage>The Customer Contract Template and the Contract Template must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_org_cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( ACCL__Sales_Org__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Sales_Org__c</errorDisplayField>
        <errorMessage>The Sales Org can&apos;t be edited after Contract Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Workflow_Required_Field</fullName>
        <active>true</active>
        <description>The Workflow can&apos;t be empty.</description>
        <errorConditionFormula>AND((RecordType.DeveloperName == &apos;Customer_Contract_Template&apos;), ISBLANK(ACCL__Workflow__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Workflow__c</errorDisplayField>
        <errorMessage>The Workflow can&apos;t be empty.</errorMessage>
    </validationRules>
</CustomObject>